    configuration options.
  * Add a "View Source" tab to allow users who do not have permission to edit
    a topic to view its wiki markup.
  * Enable DBCP prepared statement pooling to improve performance.
  * Remove ability to automatically upgrade from versions prior to 0.9.0.
  * Add RankingAlgorithm search engine support (nnagarajayya).

Bugfixes:

Translation Updates:


1.0.1
=====

Bugfixes:

  * Fix a locking issue with Lucene that could prevent the search index from
    being updated when topics are changed immediately after upgrading.
  * Update ASA database support for JAMWiki version 1.0.x, tested with SQL
    Anywhere 11.0.1 (dallas).
  * Fix the subst: tag to properly substitute content when a topic is saved.
    Reported by Gregory Brown.
  * Namespaces should be handled case-insensitive, but instead variations in
    case-sensitivity could throw IllegalArgumentException.  Reported by Quynh
    Nguyen and Tan-Vinh Nguyen.

Translation Updates:

  * Updated German translations (axelclk).


1.0.0
=====

New Features:

  * Add an option to specify a "shared file repository" from the Special:Admin
    page. If set, then any virtual wiki will be able to access images from the
    "shared" virtual wiki as if they were on the same virtual wiki.
  * Use a new algorithm for image resizing to greatly improve image quality.
  * Update the Special:Diff UI to display additional information, including
    revision dates, edit comments, and links to previous/next diff.
  * Display author, revision information, and links to previous/next revision
    when viewing an old version of a topic.
  * Virtual wiki enhancements including the ability to configure a different
    site name, meta description and logo for each virtual wiki.
  * Support the #switch parser functions. Usage:
    "{{#switch: value | case1 = result | case2 = result | default}}".
  * Support the #ifexist parser function. Usage:
    "{{#ifexist: topic | exists | does not exist}}".