@@ -1,7 +1,7 @@
-<p><a class="interwiki" title="Main_Page" href="http://en.wikipedia.org/wiki/Main_Page">Main_Page</a></p>
-<p><a class="interwiki" title="Main Page" href="http://en.wikipedia.org/wiki/Main_Page">Main Page</a></p>
-<p><a class="interwiki" title="Main Page" href="http://en.wikipedia.org/wiki/Main_Page">Main Page</a></p>
-<p><a class="interwiki" title="Main Page" href="http://en.wikipedia.org/wiki/Main_Page">Main Page</a></p>
+<p><a class="interwiki" title="wikipedia:Main_Page" href="http://en.wikipedia.org/wiki/Main_Page">wikipedia:Main_Page</a></p>
+<p><a class="interwiki" title="wikipedia : Main Page" href="http://en.wikipedia.org/wiki/Main_Page">wikipedia : Main Page</a></p>
+<p><a class="interwiki" title="wIkIpEdIa: Main Page" href="http://en.wikipedia.org/wiki/Main_Page">wIkIpEdIa: Main Page</a></p>
+<p><a class="interwiki" title="wikipedia : Main Page" href="http://en.wikipedia.org/wiki/Main_Page">wikipedia : Main Page</a></p>
 <p><a href="/wiki/en/Special:Edit?topic=Wikipedia" class="edit" title="Wikipedia">Wikipedia</a></p>
 <p><a class="interwiki" title="jamwiki:" href="http://jamwiki.org/wiki/en/">jamwiki:</a></p>
 <p><a class="interwiki" title="wikipedia:" href="http://en.wikipedia.org/wiki/">wikipedia:</a></p>
